# fileo

./: .gitignore  CHANGELOG.md  Known issues.md  LICENSE.txt  README.md  entry_point.py  entry_point.spec  fileo.py  fileo.spec  pyproject.toml
src/: main.py  ui_main.py
src/core/: app_globals.py  app_signals.py  bk_ut.py  check_update.py  compact_list.py  create_db.py  db_ut.py  dir_model.py  drag_drop.py  duplicates.py  edit_delegates.py  edit_tree_model2.py  file_model.py  filename_editor.py  history.py  icons.py  iman.py  linux_menu.py  linux_win.py  load_files.py  low_bk.py  reports.py  sho.py  table_model.py  utils.py  win_menu.py  win_win.py
src/fileo/: main.py
src/qss/: __init__.py  big.param  brown.param  common.param  copy_toml.cmd  dark1-12.param  dark1.param  dark2-12.param  dark2.param  dark_green.param  dark_theme.param  deep_blue.param  default-12.param  default.param  default.qss  fileo.toml  icons.toml  light_theme.param  sand_brown.param  themes.toml
src/tug/: __init__.py
src/ui/: main.ui  ui_main.py
src/widgets/: about.py  about.ui  base_search_dlg.py  comment.py  comment.ui  cust_msgbox.py  cust_msgbox.ui  custom_grips.py  dir_tree_cycle.py  dt_editor.ui  dup.py  dup.ui  field_editor.ui  file_authors.py  file_data.py  file_info.py  file_note.py  file_note.ui  file_notes.py  file_search.py  file_tags.py  filter_setup.py  find_files.py  fltr_adv_page.ui  fltr_gen_page.ui  fold_container.py  fold_container.ui  foldable.py  foldable.ui  font_choosing.py  font_list.ui  header_field_editor.py  locations.py  note_editor.py  notes.ui  open_db.py  (+32 more)
(+43 files in other folders)
